tests/baselines/reference/badArrayIndex.errors.txt
==== tests/cases/compiler/badArrayIndex.ts (2 errors) ====
    var results = number[];
                         ~
!!! badArrayIndex.ts(1,22): error TS1005: 'expression' expected.
                  ~~~~~~
!!! badArrayIndex.ts(1,15): error TS2095: Cannot find name 'number'.